--- a/media/css/impala/users.less
+++ b/media/css/impala/users.less
@@ -219,6 +219,12 @@ img.icon {
     .border-radius(3px);
 }
 
+#recaptcha_help {
+	display: block;        
+	padding: 13px 8px 0 0;
+	font-size: 11px;
+}
+
 .register {
     .recaptcha-container {
         display: inline-block;
