formatting changes and added support for -rtl

--- a/media/css/impala/users.less
+++ b/media/css/impala/users.less
@@ -212,6 +212,7 @@ img.icon {
     }
 }
 
+
 #recaptcha_image {
     padding: 1em;
     background: #fff;
@@ -219,10 +220,16 @@ img.icon {
     .border-radius(3px);
 }
 
+.html-rtl #recaptcha_help {
+    display: block;
+    padding: 14px 0 0 8px;
+    font-size: 11px;
+}
+
 #recaptcha_help {
-	display: block;        
-	padding: 13px 8px 0 0;
-	font-size: 11px;
+    display: block;
+    padding: 14px 8px 0 0;
+    font-size: 11px;
 }
 
 .register {
